# RRP

./: CMakeLists.txt  LICENSE  README.md
example/src/: main.cpp
rationalfit/src/: RationalFitter.h  minialg.h
rationalfit/src/eigen3x4/: EigenDecompose.h  PolySolvers.h
